syntax = "proto3";

option csharp_namespace = "ApiGrpc.Api";

package categoria;

service CategoriaGrpc {
  rpc CreateCategoria (CreateCategoriaRequest) returns (CategoriaResponse);
  rpc UpdateCategoria (UpdateCategoriaRequest) returns (CategoriaResponse);
  rpc GetCategoria (GetCategoriaRequest) returns (CategoriaResponse);
  rpc ListCategorias (ListCategoriasRequest) returns (CategoriaListResponse);
  rpc DeleteCategoria (DeleteCategoriaRequest) returns (DeleteCategoriaResponse);
}

message CreateCategoriaRequest {
  string nome = 1;
  string descricao = 2;
}

message UpdateCategoriaRequest {
  string id = 1;
  string nome = 2;
  string descricao = 3;
}

message GetCategoriaRequest {
  string id = 1;
}

message ListCategoriasRequest {}


message CategoriaListResponse {
  repeated CategoriaResponse categorias = 1;
}


message CategoriaResponse {
  string id = 1;
  string nome = 2;
  string descricao = 3;
}

message DeleteCategoriaRequest {
  string id = 1;
}

message DeleteCategoriaResponse {
  bool success = 1; 
  string id = 2;
}

